Bug 386768 - Use mozIStorageConnection's BackupDB instead of the current (buggy) one.  r=dietrich